dev-00: update codes for jdk13